# daily-application

./: README.md  dhcp_exhaustion.py  getMacAddr.c  getWifiConnecttingStatus.c  readProcStat
Compute-file-or-string-md5/: README.md  main_md5.c
exception_c/: README.md  exceptionCatch.cpp
linux_timer_test/: CMakeLists.txt  README.md
linux_timer_test/src/: rtc_test.c  select_test.c  setitimer_test.c  timer_test.c  timerfd_test.c
simple_socket_broadcast/: README.md  client.c  server.c
simple_socket_file_trans/: CMakeLists.txt  client.c  server.c
tcp_Subcontract_and_package/: Makefile  README.md  client.cpp  server.cpp
